# origami

./: .gitignore  CMakeLists.txt  README.md
origami/: CMakeLists.txt
origami/common/: arrayfat_interface.h  arraylist_interface.h  arraylist_schema.h  basic_tuples.h  rusty_ints.h  tuple_schema.h
origami/include/: app.h  camera.h  device_interface.h  device_schema.h  device_structs.h  file_utils.h  input.h  input_handler.h  input_schema.h  material.h  mesh.h  origami.h  shape.h  tga.h  utils.h
origami/include/cpp/: clipper_wrapper.hpp  poly2tri_wrapper.hpp
origami/src/: app.c  camera.c  device_interface.c  file_utils.c  input_handler.c  main.c  material.c  mesh.c  shape.c
origami/src/cpp/: clipper_wrapper.cpp  poly2tri_wrapper.cpp
res/shaders/: default.fsh  default.vsh
src/: CMakeLists.txt  app.c  app.h  arraylist_interface.h  arraylist_schema.h  common_macros.h  device_interface.c  device_interface.h  device_structs.h  file_utils.c  file_utils.h  main.c  matrix.h  mesh.c  mesh.h  rusty_ints.h  shape.c  shape.h  tuple_interface.c  utils.c  utils.h
src/common/: arrayfat_schema.h  arraylist_interface.h  common_macros.h  tuple_interface.h  tuple_structs.h
